--- a/src/components/loading/loading.module.css
+++ b/src/components/loading/loading.module.css
@@ -1,10 +1,11 @@
 .loader_container {
     width: 100%;
-    height: 100%;
+    height:600px;
     display:flex;
     justify-content: center;
     align-items: center;
     font-weight: bold;
     color:white;
+    font-size: 30px;
 }
 
