--- a/src/components/details/media.css
+++ b/src/components/details/media.css
@@ -11,17 +11,35 @@
     }
     .container .production .div{
         position: absolute;
-        top: 680px;
+        top: 730px;
         width:50%;
     }
     .container .overview .div{
         position: absolute;
-        top: 650px;
+        top: 700px;
         width:50%;
     }
     .container .genre .div{
         position: absolute;
-        top: 610px;
+        top: 660px;
+        width:50%;
+    }
+}
+
+@media (max-width: 470px){
+    .container .production .div{
+        position: absolute;
+        top: 890px;
+        width:50%;
+    }
+    .container .overview .div{
+        position: absolute;
+        top: 850px;
+        width:50%;
+    }
+    .container .genre .div{
+        position: absolute;
+        top: 810px;
         width:50%;
     }
 }
